--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -55,6 +55,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RPT_Sach.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>RPT_Sach.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Sach_DTS.cs">
       <DependentUpon>Sach_DTS.xsd</DependentUpon>
     </Compile>
@@ -131,6 +137,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="RPT_Sach.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>RPT_Sach.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Sach_RPT.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>Sach_RPT.cs</LastGenOutput>
